[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "physioex"
version = "1.0.9"
description = "A python package for explainable sleep staging via deep learning"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Guido Gagliardi", email = "guido.gagliardi@phd.unipi.it" }
]
license = {file = "LICENSE"}
dependencies = [
    # Base dependencies are in optional-dependencies sections
    # Use: pip install -e .[standalone] or pip install -e .[hpc]
]

[project.optional-dependencies]
# For HPC environments with pre-loaded modules (minimal dependencies)
hpc = [
    "huggingface_hub",
    "vector_quantize_pytorch",
    "pytorch_metric_learning",
    "captum",
    "dirhash",
    "joblib",
    "loguru",
    "numpy",
    "pandas",
    "psg_utils",
    "pyEDFlib",
    "pyunpack",
    "PyYAML",
    "rarfile",
    "requests",
    "seaborn",
    "setuptools",
    "tqdm",
    "wfdb",
]

# For standalone environments (all dependencies)
standalone = [
    "huggingface_hub",
    "vector_quantize_pytorch",
    "tensorboard",
    "boto3",
    "botocore",
    "braindecode",
    "captum",
    "dirhash",
    "h5py",
    "joblib",
    "lightning",  
    "loguru",
    "matplotlib",
    "numpy",
    "pandas",
    "psg_utils",
    "pyEDFlib",
    "pytorch_lightning",  
    "pytorch_metric_learning",
    "pyunpack",
    "PyYAML",
    "rarfile",
    "requests",
    "scikit_learn",
    "scipy",
    "seaborn",
    "setuptools",
    "torch",  
    "torchmetrics", 
    "tqdm",
    "wfdb",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["physioex*"]

[project.scripts]
train = "physioex.train.bin.train:train_script"
finetune = "physioex.train.bin.finetune:finetune_script"
test_model = "physioex.train.bin.test:test_script"
preprocess = "physioex.preprocess.bin.main:main"

[project.urls]
Homepage = "https://github.com/guidogagl/physioex"
Documentation = "https://guidogagl.github.io/physioex"
Repository = "https://github.com/guidogagl/physioex"
Issues = "https://github.com/guidogagl/physioex/issues"